--- a/_posts/2011-06-01-years-ago.md
+++ b/_posts/2011-06-01-years-ago.md
@@ -4,8 +4,6 @@ title:  "Years Ago"
 date:   2011-06-01 22:01:04 -0700
 categories: intro
 ---
-In a blur long long ago I decided to pursue something. 
-
-I wrote about it [here][blogger-link] on blogger. For now I am trying to <!--more-->figure out a work flow but those of you who have read the ancient post I just reached a halfway point and have exciting things to begin blogging, finally. 
+In a blur long long ago I decided to pursue something. I wrote about it [on blogger][blogger-link] when the web 2.0 was exploding. For now I am trying to <!--more-->figure out a work flow but those of you who have read the ancient post I just reached a halfway point and have exciting things to begin blogging. This is going to happen here where I can learn more about [jekyll](https://jekyllrb.com) and exercise working more with git and ruby. 
 
 [blogger-link]: https://poproar.blogspot.com/2011/06/decision-made-introduction-to-future.html
